--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,3 +15,42 @@
 .avatar-home img {
   width: 40px;
 }
+
+.navbar-lewagon {
+  justify-content: space-between;
+  border-bottom: 0.5px solid #fd0054;
+  background-color: rgba(42, 42, 42, 1);
+  position: sticky;
+  top: 0;
+  z-index: 4;
+}
+
+.fas {
+  color: #fd0054;
+}
+
+.nav-link {
+  color: white !important;
+}
+
+.nav-link:hover {
+  color: #fd0054 !important;
+}
+
+.navbar-lewagon .navbar-collapse {
+  flex-grow: 0;
+}
+
+.navbar-lewagon .navbar-brand img {
+  width: 40px;
+}
+
+.navbar-brand {
+  width: 60px;
+}
+
+
+.navbar-lewagon .navbar-brand:hover img {
+  width: 43px;
+  transition: 0.1s;
+}
