--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-
 <div class="banner-home" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(<%= asset_path 'home2.jpg' %>);">
 <div class= "entete">
     <h2> Prenez rdv avec un professionnel à distance </h2>
@@ -18,7 +17,7 @@
     </div>
   </div>
 </div>
-<div class="container">
+<div class="container1">
   <div class="bloc-vp">
     <div class="bloc-vp-cards justify-content-around">
       <div class="card">
