--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,10 +11,12 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "pages/new_reason";
 @import "components/cards";
 @import "components";
 @import "components/footer";
 @import "components/form";
+
 
 
 
