--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
     </div>
   </div>
 </div>
-<div class="container1">
+<div class="container">
   <div class="bloc-vp">
     <div class="bloc-vp-cards justify-content-around">
       <div class="card">
