--- a/app/views/profiles/dashboard.html.erb
+++ b/app/views/profiles/dashboard.html.erb
@@ -1,4 +1,5 @@
-<br>
+
+
 
 <div class="container py-5">
   <!-- Calendar -->
@@ -61,8 +62,8 @@
       </li> -->
     </ol>
     <div class= "incalendar text-center">
-<%= link_to "Mon calendrier", calendar_profile_path(@profile), class: "btn-gradient" %>
-  <%= link_to "Ajouter vos disponibilités", new_profile_availability_path(@profile), class: "btn-gradient" %>
+<%= link_to "Mon calendrier", calendar_profile_path(@profile), class: "btn btn-outline-primary" %>
+  <%= link_to "Ajouter vos disponibilités", new_profile_availability_path(@profile), class: "btn btn-outline-success" %>
     </div>
   </ul>
 </div>
@@ -74,102 +75,26 @@
 </div>
 </div>
 
-
-<div class="card-dashboard">
-  <h3>
-    Mes types de cours
-    <%= link_to "", new_profile_reason_path(@profile), class: "fas fa-plus-circle" %>
-  </h3>
-  <% if @reasons.empty? %>
-    <%= link_to "Ajouter un type de cours", new_profile_reason_path(@profile), class: "btn-gradient" %>
-  <% else %>
-    <% @reasons.each do |reason| %>
-      <%= reason.name %> -
-      <%= reason.price %>€
-      <%= link_to "", edit_reason_path(reason), class: "far fa-edit" %>
-      <%= link_to "", reason_path(reason), method: :delete, data: { confirm: "Êtes-vous sur ?" }, class: "fas fa-trash-alt" %>
-    <% end %>
-  <% end %>
-</div>
-
-<div class="card-dashboard">
-  <%= link_to "Ajouter vos disponibilités", new_profile_availability_path(@profile), class: "btn-gradient" %>
-  <%= link_to "Ajouter un créneau horraire", new_profile_timeslot_path(@profile), class: "btn-gradient" %>
-  <ul class="mt-4">
-    <% @timeslots_free.each do |timeslot| %>
-      <li>
-        le <%= timeslot.date.strftime("%d/%m/%Y") %>
-        de <%= timeslot.from_time.strftime("%k:%M")  %>
-        à <%= timeslot.to_time.strftime("%k:%M") %>
-        ID: <%= timeslot.id %>
-        <%= link_to "", timeslot_path(timeslot), method: :delete, data: { confirm: "Êtes-vous sur ?" }, class: "fas fa-trash-alt", :remote => true %>
-        </li>
-    <% end %>
-
-  </ul>
-
-
-</div>
-
-<div class="card-dashboard">
-  <h3>Mes prochains Rdvideo</h3>
-  <ul class="mt-4">
-    <% @timeslots_booked.each do |timeslot| %>
-     <li>le <%= timeslot.date.strftime("%d/%m/%Y") %> de <%= timeslot.from_time.strftime("%k:%M")  %> à <%= timeslot.to_time.strftime("%k:%M") %> avec <%= timeslot.user.first_name %></li>
-    <% end %>
-
-  </ul>
-</div>
-
-<div class="card-dashboard" style="width: 70%;">
-  <div style="margin-bottom: 15px;">
-    <%= link_to "Mon calendrier", calendar_profile_path(@profile), class: "btn-gradient" %>
-  </div>
-  <div class="book-calendar">
-    <%= week_calendar partial: 'profiles/shared/booking_calendar', events: @profile.timeslots do |date, timeslots| %>
-      <% if timeslots.empty? %>
-        <hr>
-      <% else %>
-        <% timeslots.sort_by!{ |t| t.from_time }.each do |timeslot| %>
-          <%#= link_to booking_timeslot_path(timeslot) do %>
-          <% if timeslot.user_id.nil? %>
-            <div class="button-timeslot" id="available">
-              <%= timeslot.from_time.strftime('%H:%M') %>
-            </div>
-          <% else %>
-            <div class="button-timeslot" id="booked">
-              <%= timeslot.from_time.strftime('%H:%M') %>
-            </div>
-          <% end %>
-          <%# end %>
-        <% end %>
+<div class="infodash">
+  <div class="card-dashboard shadow bg-white p-5">
+    <h3>
+      Mes types de cours
+      <%= link_to "", new_profile_reason_path(@profile), class: "fas fa-plus-circle" %>
+    </h3>
+    <% if @reasons.empty? %>
+      <%= link_to "Ajouter un type de cours", new_profile_reason_path(@profile), class: "btn-gradient" %>
+    <% else %>
+      <% @reasons.each do |reason| %>
+        <%= reason.name %> -
+        <%= reason.price %>€
+        <%= link_to "", edit_reason_path(reason), class: "far fa-edit" %>
+        <%= link_to "", reason_path(reason), method: :delete, data: { confirm: "Êtes-vous sur ?" }, class: "fas fa-trash-alt" %>
       <% end %>
     <% end %>
   </div>
-</div>
 
-<div class="container py-5">
-  <!-- Calendar -->
-  <div class="calendar shadow bg-white p-5">
-    <div class="d-flex align-items-center"><i class="fa fa-calendar fa-3x mr-3"></i>
-      <h2 class="month font-weight-bold mb-0 text-uppercase"><%= Date.today.strftime("%B") %></h2>
-    </div>
-    <p class="font-italic text-muted mb-5">No events for this day.</p>
-    <ol class="days list-unstyled">
-      <%= week_calendar events: @timeslots do |date, timeslots| %>
-        <li>
-          <div class="date"><%= date.day %></div>
-          <% timeslots.each do |timeslot| %>
-            <% if timeslot.user_id.nil? %>
-              <div class="event bg-success">Disponible</div>
-            <% else %>
-              <div class="event bg-primary"><%= timeslot.user.first_name %> <%= timeslot.from_time.strftime('%H:%M') %>
-              </div>
-            <% end %>
-          <% end %>
-        </li>
-      <% end %>
-    </ol>
+  <div class="card-dashboard shadow bg-white ">
+    <p> Nombre total de RDvideos : <%= @timeslots_booked.count %></p>
   </div>
 </div>
 
