--- a/app/views/reasons/edit.html.erb
+++ b/app/views/reasons/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="reasoncss">
 <h2>Modifier la prestation</h2>
 
 <%= simple_form_for ([@profile, @reason]) do |f| %>
@@ -5,3 +6,4 @@
   <%= f.input :price %>
   <%= f.submit "Enregistrer", class: "btn btn-primary" %>
 <% end %>
+</div>
