--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -9,6 +9,11 @@
     margin-bottom: 15px;
 }
 
+.card-dashboard img {
+  width: 80px;
+  margin-bottom: 3px;
+}
+
 
 .tabs-underlined {
   display: flex;
