--- a/app/views/profiles/dashboard.html.erb
+++ b/app/views/profiles/dashboard.html.erb
@@ -94,6 +94,7 @@
   </div>
 
   <div class="card-dashboard shadow bg-white ">
+    <%= image_tag "growth.png" %>
     <p> Nombre total de RDvideos : <%= @timeslots_booked.count %></p>
   </div>
 </div>
