--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,6 @@
+<div id="container">
+   <div id="main">
+    <div id="footer">
 <div class="footer">
   <div class="footer-links">
     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -6,4 +9,11 @@
     <a href="#">Contact</a>
     <a href="#">Team</a>
   </div>
+</div>
+   <div id="main"></div>
+   <div id="footer"></div>
+</div>
+
+</div>
+</div>
 </div>
