--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,16 +19,20 @@
 
 
 
-
-
-
-body {
-  background: white;
-
+html {
+  height: 100%;
 }
+body {
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 
 html {min-height:100%;}
 
 a:hover{
     text-decoration: none;
 }
+
+
