--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -11,6 +11,11 @@
     border-top: solid 1px #e6e6e6;
     font-family: Nunito;
     padding-left: 30px;
+    position:absolute;
+    width:100%;
+    padding-top:50px;
+    height:140px;
+
 }
 
 .footer-links {
@@ -32,3 +37,20 @@
   color: #fd0054;
 }
 
+
+html, body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+#main {
+   min-height:100%;
+   position:relative;
+   padding-bottom:100px;   /* Hauteur du pied de page */
+}
+#footer {
+   position:absolute;
+   bottom:0;  /* on le colle en bas */
+   width:100%;
+   height:100px;   /* Hauteur du pied de page */
+}
