--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -14,6 +14,7 @@
       </div>
     </div>
 
+<div class="hauteurindex">
   <% @profiles.each do |profile|%>
     <%#= link_to profile_path(profile) do %>
       <div class="cards-profiles">
@@ -61,6 +62,4 @@
 
       </div>
   <% end %>
-
-
-
+</div>
