--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -31,10 +31,10 @@ margin: auto;
 }
 
 .choisissez {
-    width: 350px;
+    width: 450px;
     text-align: center;
     margin: auto;
-    margin-top: 24px;
+    margin-top:24px
 }
 
 .acces {
@@ -44,20 +44,44 @@ margin: auto;
     margin-top: 24px;
 }
 
+.containerprincial {
+  width: 100%;
+  height: auto;
+}
+
+.image-home img{
+  width: 450px;
+  height: 300px;
+}
+
+
 @media(max-width: 1300px) {
-  .container {
-width : 100%;  }
+  .containerprincial {
+width : auto;  }
 }
 
 
 @media(max-width: 992px) {
-  .container {
-    width: 100%;
+  .containerprincial {
+    width: auto;
+  }
+}
+
+@media (min-width: 576px) {
+  .containerprincial {
+width: auto
   }
 }
 
 @media(max-width: 768px) {
-  .cards {
+  .containerprincial {
     width: 100%;
   }
 }
+
+@media(max-width: 1300px) {
+  .container {
+width : auto;  }
+}
+
+
