--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -31,11 +31,22 @@
         <h5>Description</h5>
         <p><%= @profile.description %></p>
       </div>
-
       <div class="card-profile-show-information">
         <h5>Liens</h5>
         <p><%= @profile.link %></p>
       </div>
+
+      <div class="card-profile-show-information">
+        <h5>Prestations</h5>
+        <p><% @reasons.each do |reason| %>
+        <li>
+        <%= reason.name %> -
+        <%= reason.price %>€
+        </li>
+      </ol>
+      <% end %></p>
+      </div>
+
     </div>
 
     <div class="col-12 col-lg-5" id="profile-show-booking">
@@ -67,6 +78,8 @@
   </div>
 
 </div>
+
+
 
 
 
