--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,9 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="card">
+          <div class="img-fluid" alt="Responsive image">
           <%= image_tag 'yoga.jpg' %>
+          </div>
           <div class="choisissez">
            <p>Choisissez le professionnel et ainsi que le créneau
           qui vous convient</p>
@@ -33,7 +35,9 @@
       </div>
       <div class="col-sm-6">
         <div class="card">
+          <div class="img-fluid" alt="Responsive image">
         <%= image_tag 'video2.jpg' %>
+          </div>
         <div class="acces">
         <p>Accédez à votre rendez vous le jour J</p>
         </div>
