--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -8,7 +8,7 @@
     height: 300px;
     margin-top: 80px;
     margin-bottom: 80px;
-    height: auto;
+    height: 400px;
 }
 
 .bloc-vp-cards {
@@ -22,14 +22,17 @@
 
 
 .card img {
-    width: 450px;
+    width: auto;
     height: 300px;
     justify-content: center;
     align-items: center;
     /* margin-left: 10px; */
     padding: 2px;
     outline : black solid 3px;
+    max-width: 100%;
+    height: 300px;
 }
+
 
 .container {
     width: 100%;
